@@ -38,8 +38,7 @@
 #	endif
 #endif
 
-char **	setproctitle_save_env(int argc, char **argv);
-void	setproctitle_init(const char *title);
+char	**setproctitle_save_env(int argc, char **argv);
 void	setproctitle_set_status(const char *status);
 void	setproctitle_free_env(void);
 
