@@ -10,6 +10,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Italian, Japanese and
 ...G...PS. [ZBX-9274] added printing defaults when Zabbix programs are executed with --help option (dimir)
 
 Bug fixes:
+...G...PS. [ZBX-9863] fixed compilation warning regarding "empty_str" initialization in setproctitle.c (gleb)
 ........S. [ZBX-9912] fixed ITEM.LASTVALUE macro value being truncated at bytes rather than utf-8 characters (wiper)
 ........S. [ZBX-9643] fixed value passing to action message from user defined macros (viktors)
 ........S. [ZBX-7511] removed trimming of leading and trailing spaces in SNMP strings (gleb)
@@ -177,6 +178,7 @@ New features:
 A.F....... [ZBX-1357] updated Chinese (China), Czech, French, Italian, Russian and Turkish translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+...G...PS. [ZBX-9863] fixed compilation warning regarding "empty_str" initialization in setproctitle.c (gleb)
 ........S. [ZBX-9912] fixed ITEM.LASTVALUE macro value being truncated at bytes rather than utf-8 characters (wiper)
 ........S. [ZBX-9643] fixed value passing to action message from user defined macros (viktors)
 ........S. [ZBX-7511] removed trimming of leading and trailing spaces in SNMP strings (gleb)
@@ -861,6 +863,7 @@ New features:
 A.F....... [ZBX-1357] updated Czech, Italian and Russian translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+...G...PS. [ZBX-9863] fixed compilation warning regarding "empty_str" initialization in setproctitle.c (gleb)
 ........S. [ZBX-9912] fixed ITEM.LASTVALUE macro value being truncated at bytes rather than utf-8 characters (wiper)
 ........S. [ZBX-9643] fixed value passing to action message from user defined macros (viktors)
 ........S. [ZBX-7511] removed trimming of leading and trailing spaces in SNMP strings (gleb)
